--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
 GOOGLE_MAPS_SERVER_KEY=AIzaSyB3yNZfX96tMpLRQHiZ1uIMm2pzmQvyjpU
+NEXT_PUBLIC_GOOGLE_MAPS_BROWSER_KEY=AIzaSyBOiMkNh1ypiZfE9kHxpfcJNSy4CGUdYms
